{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 10,
  "lineage": "3b0200b0-01d1-6ef9-ed05-3bb7f555de00",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:587748224979:internet-gateway/igw-0f285254af037de23",
            "id": "igw-0f285254af037de23",
            "owner_id": "587748224979",
            "tags": {
              "Name": "ai-remediation-igw"
            },
            "tags_all": {
              "Name": "ai-remediation-igw"
            },
            "vpc_id": "vpc-0e1da9bfc3f668b6b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:587748224979:route-table/rtb-0f18dba63fe520279",
            "id": "rtb-0f18dba63fe520279",
            "owner_id": "587748224979",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ai-remediation-private-rt"
            },
            "tags_all": {
              "Name": "ai-remediation-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e1da9bfc3f668b6b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:587748224979:route-table/rtb-02fcb942b2133c60b",
            "id": "rtb-02fcb942b2133c60b",
            "owner_id": "587748224979",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f285254af037de23",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ai-remediation-public-rt"
            },
            "tags_all": {
              "Name": "ai-remediation-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e1da9bfc3f668b6b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c51c70cf8909e6b",
            "route_table_id": "rtb-0f18dba63fe520279",
            "subnet_id": "subnet-031cb79943eacd90d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00baa9098f1f2fe58",
            "route_table_id": "rtb-02fcb942b2133c60b",
            "subnet_id": "subnet-0b0b7c0237cfafe44"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:587748224979:subnet/subnet-031cb79943eacd90d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-031cb79943eacd90d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "587748224979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ai-remediation-private-subnet"
            },
            "tags_all": {
              "Name": "ai-remediation-private-subnet"
            },
            "vpc_id": "vpc-0e1da9bfc3f668b6b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:587748224979:subnet/subnet-0b0b7c0237cfafe44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b0b7c0237cfafe44",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "587748224979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ai-remediation-public-subnet"
            },
            "tags_all": {
              "Name": "ai-remediation-public-subnet"
            },
            "vpc_id": "vpc-0e1da9bfc3f668b6b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:587748224979:vpc/vpc-0e1da9bfc3f668b6b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-009cfd16a1010cb2d",
            "default_route_table_id": "rtb-09cb458f59f7ca3eb",
            "default_security_group_id": "sg-0144652146f641679",
            "dhcp_options_id": "dopt-06de1343854fd198e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e1da9bfc3f668b6b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09cb458f59f7ca3eb",
            "owner_id": "587748224979",
            "tags": {
              "Name": "ai-remediation-vpc"
            },
            "tags_all": {
              "Name": "ai-remediation-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}